# KaminAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useArticles.ts  useAuth.ts  useChat.ts  useLeaderboard.ts  usePinnedRepos.ts
frontend/src/pages/: AboutPage.tsx  ArticlePage.tsx  BlogPage.tsx  HomePage.tsx  LeaderboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PortfolioPage.tsx  RegisterPage.tsx  index.ts
frontend/src/services/: api.ts  articleService.ts  authService.ts  chatService.ts  leaderboardService.ts  pinnedRepoService.ts  portfolioService.ts  profileService.ts  textEnhancementService.ts  uploadService.ts
frontend/src/types/: article.ts  auth.ts  chat.ts  leaderboard.ts  pinnedRepo.ts  portfolio.ts  profile.ts  textEnhancement.ts
scripts/: mongo-init.js
src/: __init__.py  main.py
src/application/dto/: __init__.py  admin_profile_dto.py  article_dto.py
src/application/services/: __init__.py  admin_profile_service.py  article_service.py  auth_service.py  chat_service.py  media_review_service.py  pinned_repo_service.py  portfolio_service.py  text_enhancement_service.py  user_service.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  admin_profile.py  article.py  media_review.py  (+2 more)
src/infrastructure/: __init__.py
src/presentation/: __init__.py
(+88 files in other folders)
